CHANGE LOG

????-??-?? AIM Version 2.3 for BATTLETECH 1.2.0

* New: Show pilot stats in one-line mouseover hint, instead of only HP.
* New: Adjust max melee height difference by mech class.
* New: Fix heat projection on move/jump/sprint preview.
* New: Configure friends' and foes' crit multiplier.
* New: Vehicles and Turrets may now be crit'ed and killed by ammo explosions.
* New: Critical hits now follows damage transfer.
* New: Critical hits rates and cap may be set.
* New: Critical hits may optionally happens through armour.
* New: Critical hits may optionally ignore destroyed component and space.
* New: Critical hits may optionally be transferred inward when there is nothing to crit.
* New: Critical hits may optionally be rolled until there is no more crit chance.
* New: Prevent critical hit on locations with intact structure.
* New: Attack Log now logs DFA self-damage and overheat self-damage.
* Mod: Make see-through armour compatible with Mech Engineer's composite structure.
* Mod: Assume mod not found when mod compatibility check is executed at the wrong time.
* Mod: UnlockMeleePositioning and FixPaperDollRearStructure switched to IL code patch.
* Fix: Turret and Building LOS are now always coloured as front attack, instead of side or rear.
* Fix: Fix FixBossHeadCalledShotDisplay regression.
* Fix: Jumped modifier should no longer persist into next turn.
* Fix: First line in Attack Log will no longer be an empty crit on slot 1.

2018-08-28 AIM Version 2.2.1 for BATTLETECH 1.2.0

* Fix: Grey head disease regression.
* New: Errors when writing attack log is now (try to be) logged by the mod log.

2018-08-22 AIM Version 2.2 for BATTLETECH 1.2.0

* Big: Updated for 1.2.0. Incompatible with game version 1.1.2 and before.
* Big: Vehicle called shot fix removed, because fixed in 1.2.0 and mod is not backward compatible due to game update.

2018-08-23 AIM Version 2.1.1 for BATTLETECH 1.1.2

* Fix: LOS of unknown targets now always use front colour.